css/style.css
/* ... */
.social ul li {
    display: inline-block;
    margin: 0 20px;
	
}

.social a {
    font-size: 22px;
    padding-top: 15px;
    color: #ffffff;
    border-radius: 4px;
    opacity: .8;
    -webkit-transition: all .1s ease-in;
}

.social a:hover {
    opacity: 1;
    color: #ffffff;
}


/* About */

h3{
    font-size: 25px;
    text-transform: uppercase;
    padding-bottom:15px;
    font-weight: 700;
    letter-spacing: 1px;
}

#about, #speakers, #program, #sponsors {
    width: 100%;
    background: #fafafa;
    text-align: left;
}

#about .container {
    overflow: hidden;
}

@-moz-document url-prefix() {
    #about .container {
        overflow: hidden;
    }
}

#about img {
    background-size: cover;
    width: 90%;
    border: 5px solid #009AD7;
    border-radius: 5px;
    visibility: hidden;
}

.about-conference, .about-edition {
    visibility: hidden;
}

b{
    font-family: 'DecimaABold';
}

#about h4, #speakers h3, #program h3{
    font-size: 25px;
    font-family: 'Decima';
    text-transform: uppercase;
    color: #009AD7;
    font-weight: 700;
    padding-bottom:15px;
    letter-spacing: 1px;
}

#speakers h3{
    padding-bottom:0;
}

#about p, #speakers p, #program p, #sponsors p{
    color: #000000;
    font-family: 'DecimaALight';
    letter-spacing: .1px;
    font-size: 17px;
}

.full-page-content{
    padding-top:150px;
    padding-bottom:150px;
}

.content{
    padding-top:10%;
    padding-bottom:10%;
}

#tickets {
    width: 100%;
    font-family: 'DecimaBold';
    background: #0f2e51;
    text-align: justify;
}

#tickets h2 {
    color: white;
    font-weight: 900;
    letter-spacing: 2px;
    margin-bottom: 30px;
}

#tickets p{
    font-family: 'DecimaALight';
    font-weight: 300;
    font-size: 17px;
    color: #fafafa;
    letter-spacing: .3px;
    margin-bottom: 0px;
}

.tickets, #tickets-available{
    opacity: 0;
}


/* Program */

#program {
    font-family: 'DecimaALight';
    background: #0f2e51;
    text-align: justify;
    color: white;
}

#program h3, #program p {
    color: white;
}

#program .in {
    background: rgba(0,0,0, 0.4);
    padding: 26px 16px;
    /*box-shadow: 0 0 4px 2px rgba(253, 253, 253, 0.1);*/
    border: 3px solid #009AD7;
    overflow: hidden;
    position: relative;
    width: 100%;
}

#program article {
    margin-top: 20px;
    margin-bottom: 20px;
    transition: transform .7s;

}

#program .program-separator {
    background-color: #009AD7;
    margin: 0px 15px;
}

#program .program-separator h4 {
    color: white;
    margin: 0 auto;
    padding: 5px;
    font-size: 20px;
}

#program .workshop-title-container p {
    color: white;
    font-size: 22px;
    font-weight: bold;
}

#program .workshop-content-container p {
    margin: 0px;
}

#program article:hover {
    transform: scale(1.05);
}

#program article:hover .in {
    background: rgba(0,0,0, 0.6);
}

#program .workshops-container {
    margin-left: 15px;
}

@media (max-width: 600px) {
    #program .workshops-container {
        margin-left: 15px !important;
        margin-right: 15px !important;
    }
}

#program .schedule-container {
    margin-top: 40px;
}

#program .schedule-content {
    margin-top: 15px;
}


#program .schedule-item-container {
    padding: 10px;
    margin-left: 15px !important;
}

#program .schedule-item-container:not(:last-child) {
    /*border-bottom: 1px solid #009AD7;*/
}

#program .schedule-item {
    display: flex;
}

#program .schedule-item-content h5 {
    font-size: 18px;
    font-weight: 600;
}

#program .time {
    border-right: 1px solid #009AD7;
    margin: 0px 10px 0px 0px;
    padding-right: 10px;
}

#program .time p:not(:last-child) {
    margin-bottom: 5px;
}

#program .break {
    margin-top: 10px;
    margin-bottom: 10px;
}

#program .afternoon-separator {
    margin-bottom: 15px;
}

#program .coffee-break {
    background-color: rgba(0,0,0, 0.2) !important;
    border: 2px solid #009AD7
}

#program .schedule-container p {
    font-size: 16px;
}

/* Location */

#location {
    width: 100%;
    font-family: 'DecimaALight';
    background: #0f2e51;
    text-align: justify;
}

#map  {
    height: 400px;  /* The height is 400 pixels */
    width: 100%;  /* The width is the width of the web page */
    border: 1px solid #001220;
}

#location h3{
    font-family: 'Decima';
}

#location p{
    letter-spacing: .1px;
}
#location i{
    padding-right:10px;
}
.location-detailed-info {
    padding-right: 50px;
}

.location-detailed-info p {
    margin: 5px 0px;
}

.location-detailed-info p:first-of-type {
    font-size: 18px;
    margin-bottom: 20px;
}

.location-detailed-info p:last-of-type {
    margin-bottom: 30px;
}


/* Sponsors  */

.new_sponsor_badge, .new_speaker_badge {
    -webkit-animation: shake2 1s infinite; /* Safari, Chrome and Opera > 12.1 */
    -moz-animation: shake2 1s infinite; /* Firefox < 16 */
    -ms-animation: shake2 1s infinite; /* Internet Explorer */
    -o-animation: shake2 1s infinite; /* Opera < 12.1 */
    animation: shake2 1s infinite;
}

@keyframes shake2 {
    0% { transform: rotate(0deg); }
    80% { transform: rotate(0deg); }
    85% { transform: rotate(10deg); }
    95% { transform: rotate(-10deg); }
    100% { transform: rotate(0deg); }
}

/* Firefox < 16 */
@-moz-keyframes shake2 {
    0% { transform: rotate(0deg); }
    80% { transform: rotate(0deg); }
    85% { transform: rotate(10deg); }
    95% { transform: rotate(-10deg); }
    100% { transform: rotate(0deg); }
}

/* Safari, Chrome and Opera > 12.1 */
@-webkit-keyframes shake2 {
    0% { transform: rotate(0deg); }
    80% { transform: rotate(0deg); }
    85% { transform: rotate(10deg); }
    95% { transform: rotate(-10deg); }
    100% { transform: rotate(0deg); }
}

/* Internet Explorer */
@-ms-keyframes shake2 {
    0% { transform: rotate(0deg); }
    80% { transform: rotate(0deg); }
    85% { transform: rotate(10deg); }
    95% { transform: rotate(-10deg); }
    100% { transform: rotate(0deg); }
}
/* ... */

